Fixes portrait issues on IE

--- a/public_html/css/portrait.css
+++ b/public_html/css/portrait.css
@@ -3,6 +3,9 @@
     border-radius: 50%;
 }
 
+.portrait figure {
+    max-width: 100%;
+}
 .portrait {
     display: -ms-flexbox;
     display: -webkit-box;
